k8s_mini_project/nginx-ingress-lb.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nginx-ingress-lb
  namespace: cluster-system
  labels:
    name: nginx-ingress-lb
spec:
  selector:
    matchLabels:
      app: nginx-ingress-lb
  template:
    metadata:
      name: nginx-ingress-lb
      labels:
        app: nginx-ingress-lb
    spec:
      terminationGracePeriodSeconds: 60
      serviceAccountName: adm
      containers:
      - image: registry.cn-hangzhou.aliyuncs.com/google_containers/nginx-ingress-controller:v1.1.0
        name: nginx-ingress-lb
        ports:
        - containerPort: 80
          hostPort: 80
        - containerPort: 443
          hostPort: 443
        readinessProbe:
          httpGet:
            path: /healthz
            port: 10254
            scheme: HTTP
        livenessProbe:
          httpGet:
            path: /healthz
            port: 10254
            scheme: HTTP
          initialDelaySeconds: 10
          timeoutSeconds: 1
        args:
        - /nginx-ingress-controller
        - '--ingress-class=cluster-ingress-class'
        - '--default-backend-service=$(POD_NAMESPACE)/default-http-backend'
