k8s_mini_project/default-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: default-http-backend
  namespace: cluster-system
  labels:
    app: default-http-backend
spec:
  selector:
    app: default-http-backend
  ports:
  - port: 80
    targetPort: 8080
