k8s_mini_project/mysql-alone.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
    matchExpressions:
      - {key: app, operator: In, values: [mysql]}
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: custom-mysql:5.6
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - mountPath: /var/lib/mysql
            name: mysql-storage
        ports:
        - containerPort: 3306
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: pvc-mysql
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  type: ClusterIP
  clusterIP: 10.233.0.10
  ports:
    - port: 3306
  selector:
    app: mysql
