k8s_mini_project/redis-cluster.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-cluster
spec:
  serviceName: "redis-cluster"
  replicas: 6
  selector:
    matchLabels:
      app: redis-cluster
  template:
    metadata:
      labels:
        app: redis-cluster
    spec:
      containers:
      - name: redis
        image: docker.1ms.run/redis:5.0.9-alpine
        imagePullPolicy: IfNotPresent
        command:
        - sh
        - -c
        - |
          mkdir -p /data/redis && chown -R 999:999 /data/redis && 
          exec redis-server /etc/redis/redis.conf --cluster-announce-ip $(POD_IP) --cluster-announce-port 6379
        volumeMounts:
        - name: data
          mountPath: /data/redis
        - name: config-volume
          mountPath: /etc/redis
      volumes:
      - name: data
        emptyDir: {}
      - name: config-volume
        configMap:
          name: redis-config

---
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster
spec:
  ports:
  - port: 6379
    targetPort: 6379
  clusterIP: None
  selector:
    app: redis-cluster

---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  ports:
  - port: 6379
    targetPort: 6379
  clusterIP: 10.233.0.30
  selector:
    app: redis-cluster
  type: ClusterIP
